syntax = "proto3";

package shared;

service SharedService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc ConfirmEmail(ConfirmEmailRequest) returns (ConfirmEmailResponse) {}
}

message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  string name = 1;
  string email = 2;
}

message ConfirmEmailRequest {
  string otp = 1;
  int64 expiryDate = 2;
}

message ConfirmEmailResponse {
  bool success = 1;
}